; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/driver/extr_i2c_master.c_i2c_master_wait_cpu_cycles.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/driver/extr_i2c_master.c_i2c_master_wait_cpu_cycles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @i2c_master_wait_cpu_cycles to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2c_master_wait_cpu_cycles(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = call i64 asm sideeffect "rsr $0, ccount", "={ax},~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !2
  store i64 %5, i64* %3, align 8
  br label %6

6:                                                ; preds = %8, %1
  %7 = call i64 asm sideeffect "rsr $0, ccount", "={ax},~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !3
  store i64 %7, i64* %4, align 8
  br label %8

8:                                                ; preds = %6
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* %3, align 8
  %11 = sub nsw i64 %9, %10
  %12 = load i64, i64* %2, align 8
  %13 = icmp slt i64 %11, %12
  br i1 %13, label %6, label %14

14:                                               ; preds = %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 357}
!3 = !{i32 424}
